--- a/src/app/components/listar-empleados/listar-empleados.component.html
+++ b/src/app/components/listar-empleados/listar-empleados.component.html
@@ -2,7 +2,8 @@
     <div class="card">
         <div class="card-body">
             <span class="h3">Listado de Empleados</span>
-            <button class="btn btn-dark float-end btn-lg" routerLink="/crearEmpleado">Nuevo Empleado</button>
+            <button *ngIf="isAdmin" class="btn btn-dark float-end btn-lg" routerLink="/crearEmpleado">Nuevo Empleado</button>
+            <!-- <button *ngIf="!isAdmin" class="btn btn-dark float-end btn-lg" routerLink="/listarEmpleados">Registros</button> -->
             <h5 class="mt-5" *ngIf="empleados.length == 0">No hay registros para mostrar</h5>
             <table *ngIf="empleados.length > 0" class="table table-striped mt-5">
                 <thead>
@@ -16,17 +17,18 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let empleado of empleados">
-                    <td>{{empleado.nombre}}</td>
-                    <td>{{empleado.apellido1}}</td>
-                    <td>{{empleado.apellido2}}</td>
-                    <td>{{empleado.departamento}}</td>
-                    <td>{{empleado.email}}</td>
-                    
+                  <tr *ngFor="let empleado of empleados"> 
+                    <td *ngIf="empleado.checkActivo">{{empleado.nombre}}</td>
+                    <td *ngIf="empleado.checkActivo">{{empleado.apellido1}}</td>
+                    <td *ngIf="empleado.checkActivo">{{empleado.apellido2}}</td>
+                    <td *ngIf="empleado.checkActivo">{{empleado.departamento}}</td>
+                    <td *ngIf="empleado.checkActivo">{{empleado.email}}</td>
+                  
                     <td>
-                      <i class="fas fa-edit fa-lg text-info p-2" type="button" [routerLink]="['/editarEmpleado', empleado.id]"></i>
-                        <i (click)="eliminarEmpleado(empleado.id)" class="fas fa-trash-alt fa-lg text-danger" type="button"></i>
-                        
+                      <i *ngIf="isAdmin" title="Borrar Empleado" (click)="confirmarEliminar(empleado.id)" class="btn fas fa-trash-alt fa-lg text-danger float-end" type="button"></i>
+                      <i *ngIf="isAdmin" title="Editar Empleado" class="btn fas fa-edit fa-lg text-info p-2 float-end" type="button" [routerLink]="['/editarEmpleado', empleado.id]"></i>
+                      <i *ngIf="isRepre || isAdmin" title="Mostrar registros empleado" class="btn far fa-eye p-2 float-end" type="button" [routerLink]="['/listadoEmpleado', empleado.uid]"></i>
+
                     </td>
                   </tr>
                 </tbody>
