--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,10 +2,13 @@
     <div class="container-fluid">
         <span class="navbar-brand mb-0 text-uppercase">Time-Keeper</span>
         <span *ngIf="!isLoggedIn" class="navbar-brand mb-0 h5 text-center float-none">Registro de la jornada laboral</span>
-        <span *ngIf="isLoggedIn" class="navbar-brand mb-0 h5 text-center float-none">Usuario del sistema: {{email}}</span>
+        <span *ngIf="isLoggedIn" class="navbar-brand mb-0 h5 text-center float-start">Bienvenido/a {{nombre}} rol: {{rol}}</span>
+        
         <div>
           <button *ngIf="isLoggedIn" class="btn btn-dark float-end btn-lg float-end" routerLink="/login" (click)="logOut()">Logout</button>
-          <button *ngIf="!isLoggedIn" class="btn btn-dark float-end btn-lg float-end" routerLink="/#">Login</button>      
+          <button *ngIf="!isLoggedIn" class="btn btn-dark float-end btn-lg float-end" routerLink="/#">Login</button>
+          <button *ngIf="isRepre || isAdmin" class="btn btn-dark float-end btn-lg float-end" routerLink="/listarEmpleados">Empleados</button>  
+          <button *ngIf="isRepre || isAdmin" class="btn btn-dark float-end btn-lg float-end" [routerLink]="['/listadoEmpleado', loggedUser]">Registros</button>         
         </div>
 
     </div>
